Beta version of the game to be played by the Garfield students